add functionality for ratings < 6